--- a/Server/package.json
+++ b/Server/package.json
@@ -2,6 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Backend Logic For My Project",
+  "engines": {
+    "node": "22"
+  },
   "keywords": [
     "node.js",
     "express.js",
