--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,3 @@
 PORT = 4100
 FRONTEND_URL=http://localhost:5173
-REACT_APP_API_URL= https://react-x-node.onrender.com
+# REACT_APP_API_URL= https://react-x-node.onrender.com
