Untill Test Work is Done and Active

--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,7 @@
 PORT = 4100
 FRONTEND_URL=https://react-x-node.vercel.app
 # REACT_APP_API_URL= https://react-x-node.onrender.com
+
+MONGO_URI = mongodb+srv://ayodelu4:<db_password>@renode.elivbjp.mongodb.net/renode_db?retryWrites=true&w=majority
+
+# server_db_pass = BwPKMP4XmfZsydcT
