--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,6 @@
 PORT = 4100
 FRONTEND_URL=https://react-x-node.vercel.app
-#REACT_APP_API_URL= https://react-x-node.onrender.com
 MONGO_URI = 'mongodb+srv://ayodelu4:BwPKMP4XmfZsydcT@renode.elivbjp.mongodb.net/renode_db'
+NODE_ENV === 'production'
 
 # server_db_pass = BwPKMP4XmfZsydcT
