push: add env fpr vercel

--- a/Server/.env
+++ b/Server/.env
@@ -1,5 +1,6 @@
 PORT = 4100
 FRONTEND_URL= https://react-x-node.netlify.app
+VERCEL_URL = https://react-x-node.vercel.app
 MONGO_URI = 'mongodb+srv://ayodelu4:BwPKMP4XmfZsydcT@renode.elivbjp.mongodb.net/renode_db'
 NODE_ENV === 'production'
 
